--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,19 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>myall Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+  	<serlet.version>3.1.0</serlet.version>
+  </properties>
+  
   <dependencies>
+  	
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>javax.servlet-api</artifactId>
+  		<version>${serlet.version}</version>
+  	</dependency>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
